[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-mcp-server"
version = "0.1.0"
description = "TRON blockchain MCP server – query balances, build/sign/broadcast transactions via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "base58>=2.1.0",
    "ecdsa>=0.18.0",
    "pycryptodome>=3.19.0",
    "tronpy>=0.4.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.20.0",
    "starlette>=0.27.0",
    "sse-starlette>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "qrcode[pil]>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
tron-mcp-server = "tron_mcp_server.server:main"

[tool.setuptools.packages.find]
include = ["tron_mcp_server*"]
